--- a/less/less.main.less
+++ b/less/less.main.less
@@ -1,15 +1,36 @@
-@font-stack: Helvetica, sans-serif;
 @primary-color: #333;
 
 body {
   color: @primary-color;
   background: black;
+  font-family: 'Inconsolata', monospace;
+  width: 100%;
 }
 
 .text-comp {
-  font: 500% @font-stack;
+  position: absolute;
   width: 100%;
   height: 100%;
+}
+
+#mount, .container {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.footer {
+  position: absolute;
+  width: 100%;
+  top: 3%;
+  text-align: center;
+  color: black;
+  font-weight: bold;
+  mark {
+    background-color: white;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
 
 .jumbotron {
@@ -17,16 +38,17 @@ body {
   background: none;
 }
 
-.gifComp {
+.giphy-composition {
+  height: 100%;
+  width: 100%;
   margin: 0;
-  position: fixed;
   top: 0;
   left: 0;
 }
 
 video, img {
   display: block;
-  position: fixed;
+  //position: fixed;
   float: left;
   width: 100vw;
   height: 100vh;
@@ -37,12 +59,23 @@ video, img {
 
 .clock, .count-up {
   z-index: 2;
+  font-size: 5rem;
 }
 
 .count-up {
   color: cyan;
 }
 
-em {
-  font-size: 30rem;
+span.tag {
+  font-size: 20rem;
+  //filter: blur(5px);
+  filter: brightness(200);
+  //filter: contrast(200%);
+  filter: drop-shadow(16px 16px 20px aqua);
+  //filter: grayscale(50%);
+  //filter: hue-rotate(90deg);
+  //filter: invert(5%);
+  //filter: opacity(25%);
+  //filter: saturate(30%);
+  //filter: sepia(60%);
 }
