restyles for live demo

--- a/less/less.main.less
+++ b/less/less.main.less
@@ -20,6 +20,7 @@ body {
 }
 
 .footer {
+  font-size: 1.2em;
   position: absolute;
   width: 100%;
   top: 3%;
@@ -34,6 +35,7 @@ body {
 }
 
 .jumbotron {
+  margin-top: 1em;
   color: #f34;
   background: none;
 }
@@ -67,7 +69,7 @@ video, img {
 }
 
 span.tag {
-  font-size: 20rem;
+  font-size: 7rem;
   //filter: blur(5px);
   filter: brightness(200);
   //filter: contrast(200%);
